fetching data (holding registers and coils)

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,7 @@
     <h1>PLC Control Panel</h1>
     <button class="btn" id="start">Start</button>
     <button class="btn" id="stop">Stop</button>
+    <p id="count">0</p>
+    <p id="coils">0</p>
 </body>
 </html>
